Bug 92099 - [All regression]System fail to boot up: stopped at "fb: switching to inteldrmfb from EFI VGA" screen
Summary: [All regression]System fail to boot up: stopped at "fb: switching to inteldrm...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: highest blocker
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL: http://patchwork.freedesktop.org/patc...
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-24 07:55 UTC by wendy.wang
Modified: 2017-10-06 14:29 UTC (History)
1 user (show)

See Also:
i915 platform: BDW, BSW/CHT, HSW, SKL
i915 features:


Attachments
Skylake i5-6600K kernel oops in i915 (7.66 KB, text/plain)
2015-09-24 08:14 UTC, Tomi Sarvela
no flags Details
Haswell i7-4770K kernel oops in i915 (7.25 KB, text/plain)
2015-09-24 08:15 UTC, Tomi Sarvela
no flags Details
Skylake serial port log (49.89 KB, text/plain)
2015-09-24 08:30 UTC, ye.tian
no flags Details

Description wendy.wang 2015-09-24 07:55:56 UTC
Failed platform: All platforms
Kernel regression: Yes

Description:
Boot up system, all systems will fail at: "fb: switching to inteldrmfb from EFI VGA" screen

Good commit:
commit be4c3386195eae0a1cd49f1d7a634cc1a127a1b4
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Tue Sep 22 17:18:07 2015 +0200

    drm-intel-nightly: 2015y-09m-22d-15h-17m-30s UTC integration manifest


Bad commit:
commit 4aa7d93732c8354782661783abb27ee08a706c5c
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Wed Sep 23 17:27:31 2015 +0200

    drm-intel-nightly: 2015y-09m-23d-15h-26m-53s UTC integration manifest
Comment 1 Tomi Sarvela 2015-09-24 08:14:49 UTC
Created attachment 118423 [details]
Skylake i5-6600K kernel oops in i915
Comment 2 Tomi Sarvela 2015-09-24 08:15:53 UTC
Created attachment 118424 [details]
Haswell i7-4770K kernel oops in i915
Comment 3 Tomi Sarvela 2015-09-24 08:17:22 UTC
Nearly all test machines oopsed on boot of last drm-intel-nightly.

Example logs from two of those.
Comment 4 ye.tian 2015-09-24 08:30:41 UTC
Created attachment 118425 [details]
Skylake  serial port log
Comment 5 ye.tian 2015-09-24 08:32:59 UTC
This bug also exists on the drm-intel-next-queued branch, does not exists on the drm-intel-fixes and drm-intel-next-fixes and drm-next branch.
Comment 6 Chris Wilson 2015-09-24 08:43:00 UTC
Why don't you have drm.debug set, it would be useful here...
Comment 7 ye.tian 2015-09-24 08:48:36 UTC
(In reply to Chris Wilson from comment #6)
> Why don't you have drm.debug set, it would be useful here...

My attachment file (Skylake serial port log )contains drm.debug.
drm.debug=0xe log_buf_len=4M
Comment 8 Chris Wilson 2015-09-24 09:04:55 UTC
(In reply to ye.tian from comment #7)
> (In reply to Chris Wilson from comment #6)
> > Why don't you have drm.debug set, it would be useful here...
> 
> My attachment file (Skylake serial port log )contains drm.debug.
> drm.debug=0xe log_buf_len=4M

But the log doesn't actually contain the extra messages.
Comment 9 Chris Wilson 2015-09-24 09:05:57 UTC
I think the fix is http://patchwork.freedesktop.org/patch/60296/
Comment 10 Chris Wilson 2015-09-24 15:42:34 UTC
commit 7c4a7d60bcda9449bca1ed2ee47392cd7acb8535
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Sep 24 11:57:45 2015 +0100

    drm/i915: Defer adding preallocated stolen objects to the VM list
Comment 11 Elizabeth 2017-10-06 14:29:34 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.